fix: add container compensation on mobile version (product info)

--- a/style.css
+++ b/style.css
@@ -38,20 +38,23 @@ button {
 
 .product-title {
   margin: 0;
-  padding: 1rem;
+  padding: 1rem .5rem;
   color: #111;
   font-family: 'Lora', serif;
   font-size: 1.25rem;
   font-weight: normal;
-  line-height: 1.75rem;
+  line-height: 1.5rem;
 }
 @media screen and (min-width: 48rem) {
   .product-title {
     padding: 1.5rem 0;
     font-size: 1.5rem;
+    line-height: 1.75rem;
   }
 }
 .product-gallery {
+  margin-right: -.5rem;
+  margin-left: -.5rem;
   display: flex;
   overflow-x: scroll;
   height: 25rem;
@@ -59,6 +62,8 @@ button {
 @media screen and (min-width: 48rem) {
   .product-gallery {
     height: 36rem;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
